unpackaged/main/default/objects/Account/fields/Intl_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Intl_Advocacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intl Advocacy</label>
    <type>Checkbox</type>
</CustomField>