unpackaged/main/default/objects/Account/fields/Intl_Advocacy_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Intl_Advocacy_Org_Type__c</fullName>
    <inlineHelpText>not the same as Category - classification for Intl Advocacy purposes</inlineHelpText>
    <label>Intl Advocacy Org Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>