unpackaged/main/default/objects/Account/fields/IRS_Financial_Form__c.field-meta.xml
<CustomField>
    <fullName>IRS_Financial_Form__c</fullName>
    <inlineHelpText>Used by Finance for Annual state registration.</inlineHelpText>
    <label>IRS Financial Form</label>
    <length>50</length>
    <type>Text</type>
</CustomField>