unpackaged/main/default/objects/Account/fields/IRS_Form_Date_Verified__c.field-meta.xml
<CustomField>
    <fullName>IRS_Form_Date_Verified__c</fullName>
    <label>IRS Form Date Verified</label>
    <type>Date</type>
</CustomField>