unpackaged/main/default/objects/Account/fields/IRS_Org_Date_Verified__c.field-meta.xml
<CustomField>
    <fullName>IRS_Org_Date_Verified__c</fullName>
    <label>IRS Org Date Verified</label>
    <type>Date</type>
</CustomField>