unpackaged/main/default/objects/Account/fields/IRS_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>IRS_Org_Type__c</fullName>
    <inlineHelpText>Used by Finance for Annual state registration.</inlineHelpText>
    <label>IRS Org Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>