unpackaged/main/default/objects/Account/fields/Is_this_an_individual_person__c.field-meta.xml
<CustomField>
    <fullName>Is_this_an_individual_person__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this grantee is an individual person rather than an organization/entity.</inlineHelpText>
    <label>Is this an individual person?</label>
    <type>Checkbox</type>
</CustomField>