unpackaged/main/default/objects/Account/fields/Ladder_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Change_Date__c</fullName>
    <inlineHelpText>Date Ladder was last changed. Set by ladder/level automation.</inlineHelpText>
    <label>Ladder Change Date</label>
    <type>Date</type>
</CustomField>