unpackaged/main/default/objects/Account/fields/Largest_Gift__c.field-meta.xml
<CustomField>
    <fullName>Largest_Gift__c</fullName>
    <inlineHelpText>The largest (hard credit) gift from this Account. See &quot;Combined Largest Gift Amount&quot; for largest gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</inlineHelpText>
    <label>Largest Gift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>