unpackaged/main/default/objects/Account/fields/Largest_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Largest_Gift_Date__c</fullName>
    <description>Date of largest (hard credit) gift made by this Account. See &quot;Combined Largest Gift Date&quot; for date of largest gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</description>
    <inlineHelpText>Date of largest (hard credit) gift made by this Account. See &quot;Combined Largest Gift Date&quot; for date of largest gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</inlineHelpText>
    <label>Largest Gift Date</label>
    <type>Date</type>
</CustomField>