unpackaged/main/default/objects/Account/fields/Largest_Partial_Soft_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Largest_Partial_Soft_Credit_Amount__c</fullName>
    <description>The largest (partial soft-credit) gift from this Account. See &quot;Combined Largest Gift Amount&quot; for largest gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</description>
    <inlineHelpText>The largest (partial soft-credit) gift from this Account. See &quot;Combined Largest Gift Amount&quot; for largest gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</inlineHelpText>
    <label>Largest Partial Soft Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>