unpackaged/main/default/objects/Account/fields/Largest_Partial_Soft_Credit_Last_3_Years__c.field-meta.xml
<CustomField>
    <fullName>Largest_Partial_Soft_Credit_Last_3_Years__c</fullName>
    <description>Largest partial-soft credit gift over last 3 years (1095 days). Based on NPSP roll-up</description>
    <inlineHelpText>Largest partial-soft credit gift over last 3 years (1095 days). Based on NPSP roll-up</inlineHelpText>
    <label>Largest Partial Soft Credit Last 3 Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>