unpackaged/main/default/objects/Account/fields/Largest_Soft_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Largest_Soft_Credit_Amount__c</fullName>
    <description>Not used. Part of the NPSP package. The amount of the largest soft credit.</description>
    <label>Largest Soft Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>