unpackaged/main/default/objects/Account/fields/Largest_Soft_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Largest_Soft_Credit_Date__c</fullName>
    <description>The date of this Contact&#39;s largest soft credit.</description>
    <inlineHelpText>Not used. Part of the NPSP package. The date of the largest soft credit.</inlineHelpText>
    <label>Largest Soft Credit Date</label>
    <type>Date</type>
</CustomField>