unpackaged/main/default/objects/Account/fields/LargestAmount__c.field-meta.xml
<CustomField>
    <fullName>LargestAmount__c</fullName>
    <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
    <inlineHelpText>The largest (hard credit) gift from this Account. See &quot;Combined Largest Gift Amount&quot; for largest gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</inlineHelpText>
    <label>Largest Gift</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>