unpackaged/main/default/objects/Account/fields/Last_Completed_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Activity_Date__c</fullName>
    <inlineHelpText>The date (&#39;Due Date&#39;) of the last completed activity (task/email/meeting/etc.) for this Account or one or more of its Contacts.</inlineHelpText>
    <label>Last Completed Activity Date</label>
    <type>Date</type>
</CustomField>