unpackaged/main/default/objects/Account/fields/Last_Date_Rated__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Rated__c</fullName>
    <inlineHelpText>When an Account&#39;s GG+A ratings were updated</inlineHelpText>
    <label>Last Date Rated</label>
    <type>Date</type>
</CustomField>