unpackaged/main/default/objects/Account/fields/Last_FY_Q1_HC__c.field-meta.xml
<CustomField>
    <fullName>Last_FY_Q1_HC__c</fullName>
    <inlineHelpText>last FY Q1 hard credit - for strategic plan metrics</inlineHelpText>
    <label>Last FY Q1 HC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>