unpackaged/main/default/objects/Account/fields/Last_FY_Q2_PSC__c.field-meta.xml
<CustomField>
    <fullName>Last_FY_Q2_PSC__c</fullName>
    <inlineHelpText>last FY Q2 partial soft credit - for strategic plan metrics</inlineHelpText>
    <label>Last FY Q2 PSC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>