unpackaged/main/default/objects/Account/fields/Last_FY_Q2_SC__c.field-meta.xml
<CustomField>
    <fullName>Last_FY_Q2_SC__c</fullName>
    <inlineHelpText>last FY Q2 soft credit - for strategic plan metrics</inlineHelpText>
    <label>Last FY Q2 SC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>