unpackaged/main/default/objects/Account/fields/Last_FY_Q3_HC__c.field-meta.xml
<CustomField>
    <fullName>Last_FY_Q3_HC__c</fullName>
    <inlineHelpText>last FY Q3 hard credit - for strategic plan metrics</inlineHelpText>
    <label>Last FY Q3 HC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>