unpackaged/main/default/objects/Account/fields/Last_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Amount__c</fullName>
    <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
    <inlineHelpText>The amount of the last (hard credit) gift from this Account. See &quot;Combined Last Gift Amount&quot; for amount of last gift overall (hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</inlineHelpText>
    <label>Last Gift Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>