unpackaged/main/default/objects/Account/fields/Last_modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_modified_Date_Time__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last modified date + time</inlineHelpText>
    <label>Last modified Date &amp; Time</label>
    <type>Date</type>
</CustomField>