unpackaged/main/default/objects/Account/fields/Last_Partial_Soft_Credit_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Partial_Soft_Credit_Gift_Amount__c</fullName>
    <description>The amount of the last (partial soft-credit) gift from this Account. See &quot;Combined Last Gift Amount&quot; for largest gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</description>
    <inlineHelpText>The amount of the last (partial soft-credit) gift from this Account. See &quot;Combined Last Gift Amount&quot; for largest gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</inlineHelpText>
    <label>Last Partial Soft Credit Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>