unpackaged/main/default/objects/Account/fields/Last_Partial_Soft_Credit_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Partial_Soft_Credit_Gift_Date__c</fullName>
    <description>Date of the last (partial soft-credit) gift made by this Account. See &quot;Combined Last Gift Date&quot; for date of last gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</description>
    <inlineHelpText>Date of the last (partial soft-credit) gift made by this Account. See &quot;Combined Last Gift Date&quot; for date of last gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</inlineHelpText>
    <label>Last Partial Soft Credit Gift Date</label>
    <type>Date</type>
</CustomField>