unpackaged/main/default/objects/Account/fields/Last_Soft_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Soft_Credit_Date__c</fullName>
    <description>Date of the last (soft-credit) gift made by this Account. See &quot;Combined Last Gift Date&quot; for date of largest gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</description>
    <inlineHelpText>Date of the last (soft-credit) gift made by this Account. See &quot;Combined Last Gift Date&quot; for date of largest gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</inlineHelpText>
    <label>Last Soft Credit Date</label>
    <type>Date</type>
</CustomField>