unpackaged/main/default/objects/Account/fields/Last_Soft_Credit_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Soft_Credit_Gift_Amount__c</fullName>
    <description>The amount of the last (soft-credit) gift from this Account. Calculated nightly by NPSP. See &quot;Combined Last Gift Amount&quot; for largest gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</description>
    <inlineHelpText>The amount of the last (soft-credit) gift from this Account. Calculated nightly by NPSP. See &quot;Combined Last Gift Amount&quot; for largest gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</inlineHelpText>
    <label>Last Soft Credit Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>