unpackaged/main/default/objects/Account/fields/Leader_of_International_Coalition__c.field-meta.xml
<CustomField>
    <fullName>Leader_of_International_Coalition__c</fullName>
    <inlineHelpText>Grantee org is Leader of International Coalition?</inlineHelpText>
    <label>Leader of International Coalition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>