unpackaged/main/default/objects/Account/fields/Leader_of_International_Network__c.field-meta.xml
<CustomField>
    <fullName>Leader_of_International_Network__c</fullName>
    <inlineHelpText>Grantee org is Leader of an International Network?</inlineHelpText>
    <label>Leader of International Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>