unpackaged/main/default/objects/Account/fields/Leader_of_National_Coalition__c.field-meta.xml
<CustomField>
    <fullName>Leader_of_National_Coalition__c</fullName>
    <inlineHelpText>Grantee org is Leader of a National Coalition?</inlineHelpText>
    <label>Leader of National Coalition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>