unpackaged/main/default/objects/Account/fields/Leader_of_Network_or_Coaliation__c.field-meta.xml
<CustomField>
    <fullName>Leader_of_Network_or_Coaliation__c</fullName>
    <formula>IF(
OR(
ISPICKVAL( Leader_of_International_Network__c  , &quot;Yes&quot;),
ISPICKVAL(Leader_of_International_Network__c  , &quot;Yes&quot;),
ISPICKVAL( Leader_of_SubNational_Network__c  , &quot;Yes&quot;),
ISPICKVAL(Leader_of_International_Coalition__c , &quot;Yes&quot;),
ISPICKVAL(Leader_of_National_Coalition__c , &quot;Yes&quot;),
ISPICKVAL(Leader_of_SubNational_Coalition__c , &quot;Yes&quot;)

),
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the Grantee is a leader of a coalition or a network (at any level).</inlineHelpText>
    <label>Leader of Network or Coaliation</label>
    <type>Checkbox</type>
</CustomField>