unpackaged/main/default/objects/Account/fields/Leader_of_SubNational_Coalition__c.field-meta.xml
<CustomField>
    <fullName>Leader_of_SubNational_Coalition__c</fullName>
    <inlineHelpText>The grantee org is a Leader of a SubNational Coalition?</inlineHelpText>
    <label>Leader of SubNational Coalition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>