unpackaged/main/default/objects/Account/fields/Leader_of_SubNational_Network__c.field-meta.xml
<CustomField>
    <fullName>Leader_of_SubNational_Network__c</fullName>
    <inlineHelpText>The grantee is a Leader of a SubNational Network?</inlineHelpText>
    <label>Leader of SubNational Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>