unpackaged/main/default/objects/Account/fields/Level_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Level_Change_Date__c</fullName>
    <inlineHelpText>Date Level was last changed.</inlineHelpText>
    <label>Level Change Date</label>
    <type>Date</type>
</CustomField>