unpackaged/main/default/objects/Account/fields/Lifetime_Giving_Listing__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Giving_Listing__c</fullName>
    <inlineHelpText>Lifetime Giving Listing</inlineHelpText>
    <label>Lifetime Giving Listing</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>