unpackaged/main/default/objects/Account/fields/Luminate_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Luminate_Legacy_ID__c</fullName>
    <inlineHelpText>Legacy Luminate ID for Accounts migrated from Luminate/Raiser Edge.</inlineHelpText>
    <label>Luminate Legacy ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>