unpackaged/main/default/objects/Account/fields/Major_Gift_Likelihood_Rating__c.field-meta.xml
<CustomField>
    <fullName>Major_Gift_Likelihood_Rating__c</fullName>
    <inlineHelpText>GGA Major Gift Likelihood Rating - likelihood to give based on wealth, relationship, and historical giving info. Once ranked by total score, assigned likelihood rating based on a fixed percentage of the entire file.</inlineHelpText>
    <label>Major Gift Likelihood Rating</label>
    <length>25</length>
    <type>Text</type>
</CustomField>