unpackaged/main/default/objects/Account/fields/Matching_Gift_Amount_Max__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Amount_Max__c</fullName>
    <inlineHelpText>The maximum amount the company will match on any single gift.</inlineHelpText>
    <label>Matching Gift Amount Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>