unpackaged/main/default/objects/Account/fields/Matching_Gift_Amount_Min__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Amount_Min__c</fullName>
    <label>Matching Gift Amount Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>