unpackaged/main/default/objects/Account/fields/Matching_Gift_Comments__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Comments__c</fullName>
    <inlineHelpText>Additional notes about the company&#39;s matching gift program.</inlineHelpText>
    <label>Matching Gift Comments</label>
    <type>TextArea</type>
</CustomField>