unpackaged/main/default/objects/Account/fields/Matching_Gift_Company__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a company that offers matching gifts?</inlineHelpText>
    <label>Matching Gift Company</label>
    <type>Checkbox</type>
</CustomField>