unpackaged/main/default/objects/Account/fields/Matching_Gift_Percent__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Percent__c</fullName>
    <inlineHelpText>The portion of a gift the company will match.</inlineHelpText>
    <label>Matching Gift Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>