unpackaged/main/default/objects/Account/fields/Matching_Gift_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Ratio__c</fullName>
    <inlineHelpText>The match ratio for the company&#39;s matching program (e.g. 1.0 if the company matches the employee gift $ for $, or 0.5 if the company will give 50 cents for every 1$ the employee gave).</inlineHelpText>
    <label>Matching Gift Ratio</label>
    <length>5</length>
    <type>Text</type>
</CustomField>