unpackaged/main/default/objects/Account/fields/Matching_Program_Website__c.field-meta.xml
<CustomField>
    <fullName>Matching_Program_Website__c</fullName>
    <inlineHelpText>Website for the Account&#39;s matching program.</inlineHelpText>
    <label>Matching Program Website</label>
    <type>Url</type>
</CustomField>