unpackaged/main/default/objects/Account/fields/Member_of_SubNational_Coalition__c.field-meta.xml
<CustomField>
    <fullName>Member_of_SubNational_Coalition__c</fullName>
    <inlineHelpText>Grantee org is a member of a SubNational Coalition?</inlineHelpText>
    <label>Member of SubNational Coalition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>