unpackaged/main/default/objects/Account/fields/Membership_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_End_Date__c</fullName>
    <inlineHelpText>Not used. Part of NPSP package and cannot be deleted. Membership end date from most recent (by Close Date) won Membership Opportunity (by Record Type) related to this Account.</inlineHelpText>
    <label>Membership End Date</label>
    <type>Date</type>
</CustomField>