unpackaged/main/default/objects/Account/fields/Membership_Join_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Join_Date__c</fullName>
    <inlineHelpText>Not used. Part of NPSP package and cannot be deleted. Membership start date from most recent (by Close Date) won Membership Opportunity (by Record Type) related to this Account.</inlineHelpText>
    <label>Membership Join Date</label>
    <type>Date</type>
</CustomField>