unpackaged/main/default/objects/Account/fields/Membership_Organization__c.field-meta.xml
<CustomField>
    <fullName>Membership_Organization__c</fullName>
    <inlineHelpText>Is your organization a membership organization that includes other groups or individuals?</inlineHelpText>
    <label>Membership Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>