unpackaged/main/default/objects/Account/fields/Membership_Organization_Definition__c.field-meta.xml
<CustomField>
    <fullName>Membership_Organization_Definition__c</fullName>
    <formula>&quot;A membership organization is any organization that allows individual people, community groups, or organizations to join as members, such as a network or coalition. Membership organizations may or may not have membership fees or dues.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A membership organization is any organization that allows individual people, community groups, or organizations to join as members, such as a network or coalition. Membership organizations may or may not have membership fees or dues.</inlineHelpText>
    <label>Membership Organization</label>
    <type>Text</type>
</CustomField>