unpackaged/main/default/objects/Account/fields/Membership_Span__c.field-meta.xml
<CustomField>
    <fullName>Membership_Span__c</fullName>
    <formula>year( Membership_End_Date__c  ) - year( Membership_Join_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Not used. Part of NPSP package and cannot be deleted. Formula: The number of years for which this Household has had a Member.</inlineHelpText>
    <label>Membership Span</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>