unpackaged/main/default/objects/Account/fields/Mission__c.field-meta.xml
<CustomField>
    <fullName>Mission__c</fullName>
    <inlineHelpText>Please enter you organization&#39;s mission here.</inlineHelpText>
    <label>Mission</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>