unpackaged/main/default/objects/Account/fields/Most_Recent_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Award_Date__c</fullName>
    <inlineHelpText>Does not include any grants in planning.</inlineHelpText>
    <label>Most Recent Award Date</label>
    <summarizedField>Opportunity.Award_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Approved Pending GA, Awarded, Active Grant, Grant Closed, Grant Closed Unsatisfactorily, Closed, Awarded (Active), Awarded (Closed), Cancelled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>AJWS Core, DAF, Donor-Designated, Emergency-Crisis, PRE, Travel Opportunity, z.Off Docket, z.Off Docket -- No GA, z.Old Docket</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>