unpackaged/main/default/objects/Account/fields/Most_Recent_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Grant_Amount__c</fullName>
    <label>Most Recent Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>